<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:background="@drawable/text_editor_selector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_back"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        />
    <ImageView
        android:id="@+id/ic_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_primary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="7dp"
        android:layout_marginTop="27dp"

        />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="9sp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        android:layout_marginTop="56dp"
        android:text="@string/forgotPassword"/>

    <TextView
        android:id="@+id/tvForgotPasswordDetailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        android:textStyle="normal"
        android:layout_marginTop="13dp"
        android:textSize="16sp"
        android:textColor="#b3000000"
        android:lineSpacingExtra="4sp"
        android:text="@string/forgotPasswordText"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_text"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/On_boarding_email_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordDetailed"
        android:layout_marginTop="38dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verificationEmailError"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="#FF0000"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/verificationEmailError"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordDetailed"
        app:layout_constraintLeft_toRightOf="@id/email_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="38dp"
        android:visibility="invisible"
        />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        android:layout_marginTop="6dp"
        android:background="@drawable/text_editor_selector"
        android:hint="@string/emailRequest"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:paddingEnd="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:id="@+id/btn_sendCode"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="38dp"
        android:background="@drawable/primary_btn"
        android:text="@string/sendCode"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:lineSpacingExtra="4sp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRememberPass"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:paddingLeft="80dp"
        android:paddingRight="5dp"
        android:layout_marginTop="100dp"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="#b3000000"
        android:lineSpacingExtra="3.5sp"
        android:text="Remember Password?"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moveToLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRememberPass"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="#b3000000"
        android:lineSpacingExtra="3.5sp"
        android:text="Log in"/>





</androidx.constraintlayout.widget.ConstraintLayout>