<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:background="@drawable/text_editor_selector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_back"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        />


    <ImageView
        android:id="@+id/ic_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_primary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="7dp"
        android:layout_marginTop="27dp"

        />

    <TextView
        android:id="@+id/tvNewPasswordHead"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="9sp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        android:layout_marginTop="18dp"
        android:text="@string/tvNewPasswordHead"/>

    <TextView
        android:id="@+id/tvNewPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvNewPasswordHead"
        android:textStyle="normal"
        android:layout_marginTop="13dp"
        android:textSize="16sp"
        android:textColor="#b3000000"
        android:lineSpacingExtra="4sp"
        android:text="@string/resetNote"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/newPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewPasswordText"
        android:layout_marginTop="38dp"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:layout_marginTop="6dp"
        android:background="@drawable/text_editor_selector"
        android:hint="@string/passwordNote"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingEnd="30dp"/>

    <ImageView
        android:id="@+id/ivHidePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_show_hide"
        app:layout_constraintTop_toTopOf="@id/etPassword"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        app:layout_constraintRight_toRightOf="@id/etPassword"
        android:layout_marginRight="16dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvConfirmPassword"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/newPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="22dp"
        />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword"
        android:layout_marginTop="6dp"
        android:background="@drawable/text_editor_selector"
        android:hint="@string/passwordNote"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingEnd="30dp"/>

    <ImageView
        android:id="@+id/ivHideConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_show_hide"
        app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
        app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintRight_toRightOf="@id/etConfirmPassword"
        android:layout_marginRight="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:id="@+id/btn_reset_password"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        android:layout_marginTop="38dp"
        android:background="@drawable/primary_btn"
        android:text="@string/resetPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:lineSpacingExtra="4sp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRememberPass"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:paddingLeft="80dp"
        android:paddingRight="5dp"
        android:layout_marginTop="100dp"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="#b3000000"
        android:lineSpacingExtra="3.5sp"
        android:text="Already have an account?"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moveToLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRememberPass"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="#b3000000"
        android:lineSpacingExtra="3.5sp"
        android:text="Log in"/>

</androidx.constraintlayout.widget.ConstraintLayout>